// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawer renders renders as open 1`] = `
"<hs-drawer open=\\"\\" class=\\"hydrated\\"><div aria-hidden=\\"true\\" class=\\"hs-overlay hs-overlay--fullpage hs-overlay--visible\\"></div><aside aria-expanded=\\"async isOpen() {
        return this._isOpen;
    }\\" class=\\"hs-drawer hs-drawer--bottom hs-drawer--visible\\">default</aside></hs-drawer>"
`;

exports[`drawer renders renders correctly with no props 1`] = `
"<hs-drawer class=\\"hydrated\\"><div aria-hidden=\\"true\\" class=\\"hs-overlay hs-overlay--fullpage\\"></div><aside aria-expanded=\\"async isOpen() {
        return this._isOpen;
    }\\" class=\\"hs-drawer hs-drawer--bottom\\">default</aside></hs-drawer>"
`;

exports[`drawer renders renders dismissible overlay 1`] = `
"<hs-drawer open=\\"\\" dismissible=\\"\\" class=\\"hydrated\\"><div aria-hidden=\\"true\\" class=\\"hs-overlay hs-overlay--fullpage hs-overlay--visible\\"></div><aside aria-expanded=\\"async isOpen() {
        return this._isOpen;
    }\\" class=\\"hs-drawer hs-drawer--bottom hs-drawer--visible\\">default</aside></hs-drawer>"
`;
